--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 cache: bundler
-bundler_args: --without production heroku
+bundler_args: "--without production heroku"
 rvm:
   - 1.9.3
   - 2.0.0
@@ -18,5 +18,5 @@ branches:
   only:
     - master
 notifications:
-  recipients:
+  email:
     - iqvoc@innoq.com
