--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,11 @@ branches:
 notifications:
   email:
     - iqvoc@innoq.com
+deploy:
+  provider: rubygems
+  api_key:
+    secure: DWoVQrrNYVXZGkeyOxEBrxq7Y4BQSUIUArbVQmnZlbInkt+Ia99uzT9CjSyXF880cKQ/vDKIV25BthlwHv3FFgn32Si0feQ4mI5dk3zHBEkH7Z3CYAoITzuLq5pWR87Qkv4Tv4zTJ6KYo4HkbjwMUrupmTth1kQvON5EFje3jdo=
+  gem: iqvoc_inflectionals
+  on:
+    tags: true
+    repo: innoq/iqvoc_inflectionals
