--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: ruby
 cache: bundler
-bundler_args:
+bundler_args: "--without production --retry 3"
 rvm:
-- 1.9.3
+# - 1.9.3
 - 2.0
-- 2.1
-- jruby-19mode
+- 2.2
+- ruby-head
+# - jruby-19mode
+# - jruby-head
 env:
 - DB=sqlite
 - DB=mysql
