--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ rvm:
 env:
 - DB=sqlite
 - DB=mysql
-before_install: cp config/database.yml.$DB config/database.yml
+before_install:
+- cp config/database.yml.$DB config/database.yml
+- gem update bundler
 before_script:
 - bundle exec rake db:drop RAILS_ENV=test
 - bundle exec rake db:create RAILS_ENV=test
